kubernetes/apps/servitor-apps/mcp/federation/app/httproute.yaml
---
# yaml-language-server: $schema=https://soulwhisper.github.io/k8s-schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name mcp-federation
spec:
  parentRefs:
    - name: agentgateway-proxy
  rules:
    - backendRefs:
        - name: *name
          group: agentgateway.dev
          kind: AgentgatewayBackend
